--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": "Server=localhost,5432;Database=postgres;User Id=postgres;Password=postgres;TrustServerCertificate=true;"
 }
