--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+#Backend
 # From .NET Core 3.0 you can use the command: `dotnet new gitignore` to generate a customizable .gitignore file
 
 *.swp
@@ -32,3 +33,36 @@ msbuild.wrn
 /backend/bin/
 /backend/obj/
 /.idea/
+
+
+#Frontend
+# Logs
+/frontend-vue/logs
+/frontend-vue/*.log
+/frontend-vue/npm-debug.log*
+/frontend-vue/yarn-debug.log*
+/frontend-vue/yarn-error.log*
+/frontend-vue/pnpm-debug.log*
+/frontend-vue/lerna-debug.log*
+
+/frontend-vue/node_modules
+/frontend-vue/.DS_Store
+/frontend-vue/dist
+/frontend-vue/dist-ssr
+/frontend-vue/coverage
+/frontend-vue/*.local
+
+/frontend-vue/cypress/videos/
+/frontend-vue/cypress/screenshots/
+
+# Editor directories and files
+/frontend-vue/.vscode/*
+!/frontend-vue/.vscode/extensions.json
+/frontend-vue/.idea
+/frontend-vue/*.suo
+/frontend-vue/*.ntvs*
+/frontend-vue/*.njsproj
+/frontend-vue/*.sln
+/frontend-vue/*.sw?
+
+/frontend-vue/*.tsbuildinfo
